--- a/counsellingApp/templates/app/admin.html
+++ b/counsellingApp/templates/app/admin.html
@@ -51,7 +51,7 @@
         <div class="col-lg-3 col-sm-6">
           <div class="card-box bg-blue">
             <div class="inner">
-              <h3>13436</h3>
+              <h3>{{ bookings }}</h3>
               <p>Total Bookings</p>
             </div>
             <div class="icon">
@@ -80,7 +80,7 @@
         <div class="col-lg-3 col-sm-6">
           <div class="card-box bg-orange">
             <div class="inner">
-              <h3>5464</h3>
+              <h3>{{ meetings }}</h3>
               <p>Total Meetings</p>
             </div>
             <div class="icon">
@@ -94,7 +94,7 @@
         <div class="col-lg-3 col-sm-6">
           <div class="card-box bg-red">
             <div class="inner">
-              <h3>723</h3>
+              <h3>{{ count }}</h3>
               <p>Total Counsellors</p>
             </div>
             <div class="icon">
