--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -13,7 +13,7 @@
     float: left;
     overflow: hidden;
     border-right: 1px solid #f7faf2;
-    background-color: #8F00FF;
+    {% comment %} background-color: #8F00FF; {% endcomment %}
 
 }
 
@@ -317,7 +317,7 @@ section {
 #elementID.active {
     background-color: white;
     border: 3px solid white;
-    border-radius: 25px;
+    
 
     width: 100%;
     color: blue;
@@ -945,6 +945,7 @@ margin-bottom:2%;
 
 #mybox4 {
     box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.2);
+   
     padding: 5%;
     padding-bottom: 5%;
     padding-top: 2%;
