--- a/counsellingApp/templates/app/admin.html
+++ b/counsellingApp/templates/app/admin.html
@@ -368,7 +368,7 @@
       </i>
     </p>
 
-    <p id="settingsPage">
+    <p id="settingPage">
       <i
         class="fas fa-circle"
         aria-hidden="true"
@@ -397,6 +397,10 @@
   document
     .getElementById("settingsPage")
     .addEventListener("click", myFunctions2);
+  document
+    .getElementById("settingPage")
+    .addEventListener("click", myFunctions2);
+
   document
     .getElementById("dashboardPage")
     .addEventListener("click", myFunctions3);
