--- a/counsellingApp/templates/app/admin.html
+++ b/counsellingApp/templates/app/admin.html
@@ -110,7 +110,7 @@
 
     <div>
       <div class="container">
-        <input type="date" id="inputdate" />
+        <p id="inputdate" />
         <br />
         <hr />
         <div class="timetable-img text-center">
@@ -440,4 +440,13 @@
       clickedTa.classList.add("active");
     });
   });
+</script>
+
+<script>
+  date = new Date();
+  year = date.getFullYear();
+  month = date.getMonth() + 1;
+  day = date.getDate();
+  document.getElementById("inputdate").innerHTML =
+    month + "/" + day + "/" + year;
 </script>
