--- a/counsellingApp/templates/app/settings.html
+++ b/counsellingApp/templates/app/settings.html
@@ -68,12 +68,14 @@
                       <i class="fas fa-check"></i>
                     </button>
 
-                    <button
-                      class="btn btn-sm btn-outline-danger remove_log"
-                      type="button"
-                    >
-                      <i class="fa fa-trash"></i>
-                    </button>
+                    <a href="{% url 'counsellingUrls:delete' 'pk' %}">
+                      <button
+                        class="btn btn-sm btn-outline-danger remove_log"
+                        type="button"
+                        id="trash"
+                      >
+                        <i class="fa fa-trash"></i></button
+                    ></a>
                   </center>
                 </td>
                 {% else %}{% endif %} {% endfor %}
