--- a/counsellingApp/templates/app/profile.html
+++ b/counsellingApp/templates/app/profile.html
@@ -22,11 +22,11 @@
 
           {% endif %}
       </div><br><center>
-           <div class="dropdown" > 
+           <div class="dropdown"  > 
                 
               <p  class="dropbtn" id ="objects">ID: {{object.user_id}}</p> 
            
-              <div class="dropdown-content" >
+              <div class="dropdown-content" style="position:fixed;">
           <a href="{% url 'counsellingUrls:loginPage'%}">LOGOUT</a>
               
             </div>
