--- a/counsellingApp/templates/app/dashboard.html
+++ b/counsellingApp/templates/app/dashboard.html
@@ -716,7 +716,43 @@
         {% else%}{% endif%} {% endfor%}
       </form>
     </div>
-  </section>
+    <div id="footer6">
+      <a href = "{% url ''%}"
+      id="adminPage">
+        <i
+          class="fas fa-circle"
+          aria-hidden="true"
+          id="elementID6"
+          type="submit"
+          method="GET"
+        >
+        </i>
+      </a>
+
+      <a href = "{% url ''%}"
+      id="settingPage">
+        <i
+          class="fas fa-circle"
+          aria-hidden="true"
+          id="elementID6"
+          type="submit"
+          method="GET"
+        >
+        </i>
+      </a>
+
+      <a href = "{% url ''%}"
+      id="dashboardPage">
+        <i
+          class="fas fa-circle"
+          aria-hidden="true"
+          id="elementID6"
+          type="submit"
+          method="GET"
+        >
+        </i>
+      </a>
+    </div></section>
 
   <script>
     $(document).ready(function () {
