--- a/counsellingApp/templates/app/profile.html
+++ b/counsellingApp/templates/app/profile.html
@@ -1,4 +1,4 @@
-{% include 'app/header.html' %}
+{% include 'app/header.html' %}{% include 'app/home.html' %}
 {% load static%}
 
 <section id="section3" >
@@ -42,7 +42,7 @@
 
 
         <div id="top1" >
-          <center><form method="get" action="{% url 'counsellingUrls:search' %}">
+          <center><form method="get" action="{% url 'counsellingUrls:search' pk%}">
             {% csrf_token %} <div id="mysearch"> 
        {% comment %}style="padding: 0.5%;  border-radius: 25px;background-color:rgba(211,211,211,0.5);"      {% endcomment %}
           <button style="border:none; padding:2%;border-radius:25px; background-color:rgba(211,211,211,0.1)" type="submit"><i  class="fas fa-search" style="opacity:0.5;font-size:12px;"></i></button>
