--- a/counsellingApp/templates/app/super.html
+++ b/counsellingApp/templates/app/super.html
@@ -1,4 +1,4 @@
-{% include 'app/header.html' %} {% load static%}
+{% include 'app/header.html' %} {% include 'app/home.html' %}{% load static%}
 
 <section id="section7">
   <h1>Super Admin</h1>
