--- a/counsellingApp/templates/app/notification.html
+++ b/counsellingApp/templates/app/notification.html
@@ -1,4 +1,4 @@
-{% include 'app/header.html' %} {% load static%}
+{% include 'app/header.html' %}{% include 'app/home.html' %} {% load static%}
 
 <section id="section4">
   <div id="section4container">
