--- a/counsellingApp/templates/app/dashboard.html
+++ b/counsellingApp/templates/app/dashboard.html
@@ -15,6 +15,7 @@
 
 <body>
   <section id="section6container3">
+    <div style="height:98%; overflow-x:hidden;overflow-y:scroll">
     <div >
       {% for object in objects%}<!---->
       {% if object.user_id == pk|add:0 %}
@@ -715,6 +716,7 @@
         <!---->
         {% else%}{% endif%} {% endfor%}
       </form>
+    </div>
     </div>
     <div id="footer6">
     <a href="{% url 'counsellingUrls:adminPage' pk %}" id="adminPage">
