--- a/counsellingApp/templates/app/settings.html
+++ b/counsellingApp/templates/app/settings.html
@@ -5,7 +5,7 @@
 <body>
   <section id="section6container2">
     <div class="col">
-      <div style="height: 95%; overflow-y: scroll">
+      <div style="height: 98%; overflow-x: hidden; overflow-y: scroll">
         <div class="col-sm-12">
           <h6>MANAGE BOOKINGS</h6>
           <hr />
