--- a/counsellingApp/templates/app/admin.html
+++ b/counsellingApp/templates/app/admin.html
@@ -56,7 +56,10 @@
               <div class="icon">
                 <i class="fas fa-book"></i>
               </div>
-              <a href="#" class="card-box-footer" id="settingsPage"
+              <a
+                href="{% url 'counsellingUrls:settingsPage' pk %}"
+                class="card-box-footer"
+                id="settingsPage"
                 >View More <i class="fa fa-arrow-circle-right"></i
               ></a>
             </div>
